preparing to upgrade to latest OS version

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         >
-        <activity android:name=".MainActivity"
+        <activity android:name="net.miles_beyond.tones.MainActivity"
 
             android:screenOrientation="portrait"
 
