--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.miles_beyond.tones">
 
+<!--    <application-->
+<!--        android:allowBackup="true"-->
+<!--        android:icon="@mipmap/ic_launcher"-->
+<!--        android:label="@string/app_name"-->
+<!--        android:roundIcon="@mipmap/ic_launcher_round"-->
+<!--        android:supportsRtl="true"-->
+<!--        android:theme="@style/AppTheme" />-->
+
+
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/pipe_01"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
@@ -12,7 +20,6 @@
         <activity android:name="net.miles_beyond.tones.MainActivity"
 
             android:screenOrientation="portrait"
-
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,5 +27,7 @@
             </intent-filter>
         </activity>
     </application>
+
+
 
 </manifest>
